# chat-with-tools

./: .gitignore  FIXES_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  README.md  REVIEW.md  __init__.py  agent_enhanced.py  config.yaml  cwt  demo_enhanced.py  main.py  migrate_config.py  pyproject.toml  quickstart.py  requirements.txt  setup.py  setup_dev.py  test_consolidation.py  test_debug.py  test_fixes.py  test_framework.py  test_gpu_detection.sh  test_tool_loading.py  test_vllm_rocm.sh  utils.py  vllm.conf.example  vllm_monitor.sh  vllm_rocm.conf.example  vllm_rocm_rx7900.conf  vllm_start_enhanced.sh  vllm_start_rocm.sh
backends/vllm/: vllm_start_universal.sh
config/: config.example.yaml  config.fallback.yaml  config.full.yaml  config.yaml  config_enhanced.yaml
demos/: council_chat.py  demo_api.py  demo_enhanced.py  demo_new_tools.py  demo_standalone.py  main.py  vllm_demo.py
docs/: ANSWER_REPOSITORY_STRUCTURE.md  CONTINUATION_BRIEF.md  ENHANCED_FEATURES.md  FIXES_AND_ENHANCEMENTS.md  FIXES_SUMMARY.md  INTEGRATION_COMPLETE.md  README.md  TOOLS_REFERENCE.md  VLLM_IMPLEMENTATION_STATUS.md
docs/architecture/: development-flow.md  index.md  repository-structure.md  system-overview.md
docs/architecture/adrs/: ADR-001-plugin-tool-architecture.md  ADR-002-multi-agent-orchestration.md  index.md
docs/archive/: index.md
docs/archive/2025-09-13/: ddgs-migration-original.md  development-flow-original.md  final-answer-no-duplication-original.md  fixes-readme-original.md  reorganization-summary.md  repository-structure-original.md  search-tool-consolidation-original.md  tool-loading-fix-original.md
docs/archive/2025-09-14/: tool-enhancement-guide-original.md  vllm-features-original.md  vllm-integration-original.md  vllm-structured-output-fix-original.md  vllm-structured-output-status-original.md
docs/archive/agent-summaries-2024-12/: agent-consolidation-summary.md  config-unified-logging-update.md  debug-logging-documentation.md  implementation-debug-logging-fixes.md  new-tools-documentation.md  repository-reorganization.md  technical-handover-document.md  testing-demo-guide.md
docs/archive/agent-summaries-2024-12/vllm-original/: VLLM_INTEGRATION.md
docs/components/: index.md
docs/components/backends/vllm/: GPU_SUPPORT_GUIDE.md
docs/components/tools/: index.md  search-tool-consolidation.md
docs/components/vllm/: index.md
docs/guides/: index.md
docs/guides/development/: debugging.md  tool-enhancement.md
docs/guides/features/: enhanced-features.md
docs/guides/migration/: ddgs-migration.md  index.md  v2-migration.md
docs/guides/troubleshooting/: index.md  recent-fixes.md  tool-loading-fix.md
docs/references/: changelog.md  index.md
docs/references/changelog/: 2025-09.md
docs/references/tools/: index.md
docs/vllm/: ROCM_FIX_GUIDE.md
src/: __init__.py  agent.py  agent_enhanced.py  orchestrator.py
src/chat_with_tools/: __init__.py  __main__.py  agent.py  agent_enhanced.py  config_manager.py  launcher.py  orchestrator.py  structured_output.py  utils.py  vllm_integration.py  vllm_tool_handler.py
src/chat_with_tools/backends/: vllm_backend.py
src/chat_with_tools/examples/: __init__.py  api_demo.py  council_mode.py  single_agent.py  tool_showcase.py
src/chat_with_tools/tools/: __init__.py  api_request_tool.py  data_analysis_tool.py  database_tool.py  python_executor_tool.py  search_tool.py  search_tool_enhanced.py  sequential_thinking_tool.py
src/tools/: memory_tool.py  python_executor_tool.py  summarization_tool.py
tests/: enhanced_tools_demo.py  test_enhanced_integration.py  test_fixed_structured.py  test_framework.py  test_imports.py  test_search_consolidation.py  test_structured_output.py  test_tool_fix.py  test_tools.py  test_vllm_schema.py  vllm_structured_demo.py
tools/: search_tool_enhanced.py
vLLM/: VLLM_INTEGRATION.md
